plugins {
    id 'java'
}
group = 'io.github.dailystruggle'
version = '1.0.0'
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}
repositories {
    mavenCentral()
}
dependencies {
    // Platform-neutral menu: the model, config, render seam, and teleport submit.
    // It links rtp-api (stable SPI) and rtp-core (RTP.scheduler / serverAccessor /
    // ConfigParser - the same engine abstractions the reference LeafRTPCountdownAddon
    // uses), but NO org.bukkit.* / spigot-api, so the jar runs on every platform.
    compileOnly project(':rtp-api')
    compileOnly project(':rtp-core')
    // Exposed transitively by rtp-api; declared so the MetricsSnapshot import is
    // self-documenting.
    compileOnly project(':metrics-api')
}
test {
    useJUnitPlatform()
}
